# automobile-inventory

./: .env.example  .gitignore  Cargo.toml  README.md
config/: development.yaml  production.yaml
migrations/: 20260204171300_inventory.sql  20260204171300_smart_inventory.sql
src/: background.rs  cache.rs  circuit_breaker.rs  config.rs  error.rs  extractors.rs  handlers.rs  lib.rs  main.rs  middleware.rs  models.rs  observability.rs  pool_manager.rs  repositories.rs  routes.rs  services.rs  state.rs  telemetry.rs  uow.rs
