[package]
name = "automobile_inventory"
version = "0.3.0"
edition = "2024"
authors = ["Daniel Cordova <daencordova@gmail.com>"]
description = "A production-grade Automobile Inventory System using Axum and Hexagonal Architecture"

[dependencies]
# ============================================
# 1. CORE & RUNTIME
# ============================================

## Async Runtime
tokio = { version = "1.49.0", features = ["full", "signal"] }
async-trait = "0.1.89"

## Error Handling & Logging
thiserror = "2.0.18"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "fmt", "json"] }

## Metrics
metrics = "0.24.3"
metrics-exporter-prometheus = "0.16.2"

## Utilities
chrono = { version = "0.4.43", features = ["serde"] }
uuid = { version = "1.21.0", features = ["v4", "serde", "v7"] }
once_cell = "1.21.3"
regex = "1.12.3"


# ============================================
# 2. WEB FRAMEWORK & HTTP
# ============================================

## Core Web Stack
axum = "0.8.8"
http = "1.0"
http-body = "1.0"
http-body-util = "0.1.3"

## Middleware & Service Utilities
tower = { version = "0.5.2", features = ["timeout", "util"] }
tower-http = { version = "0.6.7", features = ["cors", "trace", "request-id", "util", "limit", "timeout", "compression-full", "propagate-header"] }
tower_governor = "0.8.0"


# ============================================
# 3. DATA & PERSISTENCE
# ============================================

## Database
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "postgres", "macros", "chrono", "bigdecimal", "uuid", "json", "migrate"] }
bigdecimal = { version = "0.4.10", features = ["serde"] }

## Serialization
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde-aux = "4.7.0"

## Validation
validator = { version = "0.20.0", features = ["derive"] }


# ============================================
# 4. CONFIGURATION & SECURITY
# ============================================

## Environment & Config
dotenvy = "0.15.7"
envy = "0.4.2"
config = "0.15.19"

## Secrets Management
secrecy = { version = "0.10.3", features = ["serde"] }


# ============================================
# 5. API DOCUMENTATION
# ============================================

utoipa = { version = "5.4.0", features = ["axum_extras", "uuid", "chrono", "decimal"] }
utoipa-swagger-ui = { version = "9.0.2", features = ["axum"] }


# ============================================
# 6. INTEGRATION & I/O
# ============================================

## HTTP Client
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

## Data Processing
csv = "1.3"
